--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,35 +19,34 @@ before_script:
 build:
   stage: build
   script:
-    - docker build --pull -t $CONTAINER_BACKEND_IMAGE backend
-    - docker push $CONTAINER_BACKEND_IMAGE
-    - docker build --pull -t $CONTAINER_FRONTEND_IMAGE frontend
-    - docker build $CONTAINER_FRONTEND_IMAGE frontend
+    - docker build --pull -t $CI_REGISTRY backend
+    - docker build --pull -t $CI_REGISTRY frontend
+    - docker push $CI_REGISTRY
 
 python_linter:
   stage: test
   script:
-    - docker pull $CONTAINER_BACKEND_IMAGE
-    - docker run $CONTAINER_BACKEND_IMAGE invoke run-python-linter
+    - docker pull $CI_REGISTRY backend
+    - docker run $CI_REGISTRY invoke run-python-linter
 
 migrations_and_fixtures:
   stage: test
   script:
-    - docker pull $CONTAINER_BACKEND_IMAGE
-    - docker run $CONTAINER_BACKEND_IMAGE -e "DATABASE_URL=postgres://postgres:postgres@postgres:5432/ci" invoke clean-slate 
+    - docker pull $CI_REGISTRY backend
+    - docker run $CI_REGISTRY -e "DATABASE_URL=postgres://postgres:postgres@postgres:5432/ci" invoke clean-slate 
 
 python_tests:
   stage: test
   script:
-    - docker pull $CONTAINER_BACKEND_IMAGE
-    - docker $CONTAINER_BACKEND_IMAGE ci -e "DATABASE_URL=postgres://postgres:postgres@postgres:5432/ci" invoke run-python-tests --coverage
+    - docker pull $CI_REGISTRY backend
+    - docker $CI_REGISTRY ci -e "DATABASE_URL=postgres://postgres:postgres@postgres:5432/ci" invoke run-python-tests --coverage
 
 # TODO frontend linter/tests?
 
 release-develop:
   stage: release
   script:
-    - docker pull $CONTAINER_FRONTEND_IMAGE
+    - docker pull $CI_REGISTRY frontend
       # and then build frontend webpack, build up worker images etc.
       # push all images to the registry with the develop tag
   only:
@@ -56,7 +55,7 @@ release-develop:
 release-production:
   stage: release
   script:
-    - docker pull $CONTAINER_FRONTEND_IMAGE
+    - docker pull $CI_REGISTRY frontend
       # and then build frontend webpack, build up worker images etc.
       # push all images to the registry with the production tag
   only:
